# model-training

./: .gitignore  Pipfile  README.md  dvc.yaml  pylintrc  pyproject.toml  requirements-pip.txt  requirements-pipenv.txt  requirements-workflow.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml  reports.yaml  train.yaml  versioning.yaml
data/: .gitignore  a2_RestaurantReviews_FreshDump.tsv.dvc
models/: c1_BoW_Sentiment_Model.pkl  c2_Classifier_Sentiment_Model
output/: .gitignore  c1_BoW_Sentiment_Model.pkl  performance_naive_bayes_model.json  preprocessed_a1_RestaurantReviews_HistoricDump.tsv  preprocessed_a2_RestaurantReviews_FreshDump.tsv
scripts/: create_models.py  data_phase.py  preprocessing_phase.py  production_phase.py  training_phase.py
tests/: test_model.py  test_robustness.py
