[tool.poetry]
name = "model-training"
version = "1.0.0"
description = "This is a project to train a model that performs sentiment analysis on restaurant reviews."
authors = ["Philippe de Bekker, Hans Dekker, Luuk van Campen"]
license = "MIT"
readme = "README.md"
packages = [{include = "model_training"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
numpy = "1.24.4"
setuptools = "^68.0.0"
wheel = "^0.40.0"
notebook = "^6.5.4"
pandas = "^2.0.2"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
joblib = "^1.2.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pylint = "^2.11.2"
mllint = "^0.12.2"
dslinter = "^2.0.9"
dvc = "^3.0.0"
dvc-gdrive = "^2.19.2"
black = "^23.3.0"
bandit = "^1.7.5"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
mypy = "^0.931"

[tool.isort]
profile = "black"

[tool.bandit]
targets = ["scripts/", "tests/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
